--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,9 @@
 
 # ignore plain meta files (directories), but not metafiles with extensions (files)
 *.meta
-!**/*.*.meta
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
-!/[Aa]ssets/**/*.meta
+!/[Aa]ssets/**/*.*.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
