--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ide.visualstudio": "2.0.0",
     "com.unity.inputsystem": "1.0.0-preview.3",
     "com.unity.postprocessing": "2.3.0",
+    "com.unity.probuilder": "4.2.3",
     "com.unity.render-pipelines.lightweight": "7.1.8",
     "com.unity.test-framework": "1.1.9",
     "com.unity.textmeshpro": "2.0.1",
