--- a/Assets/GlitchEscape/Scripts/GlitchEscape.asmdef
+++ b/Assets/GlitchEscape/Scripts/GlitchEscape.asmdef
@@ -3,7 +3,8 @@
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:4307f53044263cf4b835bd812fc161a4"
+        "GUID:4307f53044263cf4b835bd812fc161a4",
+        "GUID:34aa492b82754644eac2f903cd496268"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
