--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.4.0",
     "com.unity.collab-proxy": "1.2.16",
+    "com.unity.entities": "0.10.0-preview.6",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.visualstudio": "2.0.0",
     "com.unity.inputsystem": "1.0.0-preview.3",
